--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,7 +19,8 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@testing-library/react": "^13.3.0",
